Change logo and name "My Portal"
git-svn-id: https://10.8.37.111/svn/jahia/trunk/modules/portal@35233 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/src/main/webapp/resources/JahiaPortal_fr.properties
+++ b/src/main/webapp/resources/JahiaPortal_fr.properties
@@ -1,3 +1,3 @@
-jnt_portal=Portail
+jnt_portal=Mon Portail
 label.portal.widget.add=widget has been added to your portal page
 label.portal.rss.add=rss widget has been added to your portal page
