--- a/src/main/webapp/resources/JahiaPortal_en.properties
+++ b/src/main/webapp/resources/JahiaPortal_en.properties
@@ -1,3 +1,3 @@
-jnt_portal=Portal
+jnt_portal=My Portal
 label.portal.widget.add=widget has been added to your portal page
 label.portal.rss.add=rss widget has been added to your portal page
