--- a/src/main/webapp/resources/JahiaPortal_fr.properties
+++ b/src/main/webapp/resources/JahiaPortal_fr.properties
@@ -1,3 +1,4 @@
 jnt_portal=Mon Portail
-label.portal.widget.add=widget has been added to your portal page
+jnt_scriptGadget=Script Gadget
 label.portal.rss.add=rss widget has been added to your portal page
+label.portal.widget.add=widget has been added to your portal page
