RB for items in studio left panel

--- a/src/main/webapp/resources/JahiaPortal_en.properties
+++ b/src/main/webapp/resources/JahiaPortal_en.properties
@@ -1,4 +1,8 @@
 jnt_portal=My Portal
+jnt_portal.componentsFolder=Select a folder for the components
+jnt_portal.columns=Number of columns
+jnt_currentUserPortal=My Portal (current user)
+jnt_currentUserPortal.defaultPortal=Select the default portal
 jnt_scriptGadget=Script Gadget
 jnt_scriptGadget.script=Script code
 label.portal.rss.add=rss widget has been added to your portal page
