--- a/src/main/webapp/resources/JahiaPortal_fr.properties
+++ b/src/main/webapp/resources/JahiaPortal_fr.properties
@@ -1,4 +1,8 @@
 jnt_portal=Mon Portail
+jnt_portal.componentsFolder=Sélectionnez un dossier pour les composants
+jnt_portal.columns=Nombre de colonnes
+jnt_currentUserPortal=Mon Portail (utilisateur courant)
+jnt_currentUserPortal.defaultPortal=Sélectionnez le portail par défaut
 jnt_scriptGadget=Script Gadget
 label.portal.rss.add=rss widget has been added to your portal page
 label.portal.widget.add=widget has been added to your portal page
