Added a resource bundle for label "Create my portal"

--- a/src/main/webapp/resources/JahiaPortal_en.properties
+++ b/src/main/webapp/resources/JahiaPortal_en.properties
@@ -1,10 +1,11 @@
-jnt_portal=My Portal
-jnt_portal.componentsFolder=Select a folder for the components
-jnt_portal.columns=Number of columns
 jnt_currentUserPortal=My Portal (current user)
 jnt_currentUserPortal.defaultPortal=Select the default portal
+jnt_portal=My Portal
+jnt_portal.columns=Number of columns
+jnt_portal.componentsFolder=Select a folder for the components
 jnt_scriptGadget=Script Gadget
 jnt_scriptGadget.script=Script code
+label.portal.create=Create my portal
+label.portal.only.live=Your personnal portal is only availabe in live<br/>In edit mode you can only manage the components that are available in this portal under the portal-components Area
 label.portal.rss.add=rss widget has been added to your portal page
 label.portal.widget.add=widget has been added to your portal page
-label.portal.only.live=Your personnal portal is only availabe in live<br/>In edit mode you can only manage the components that are available in this portal under the portal-components Area
