BOUYGUES-18 : French translation missing for myPortal

--- a/src/main/webapp/resources/JahiaMyPortal_fr.properties
+++ b/src/main/webapp/resources/JahiaMyPortal_fr.properties
@@ -4,7 +4,18 @@ jnt_portal=Mon Portail
 jnt_portal.columns=Nombre de colonnes
 jnt_portal.componentsFolder=Sélectionnez un dossier pour les composants
 jnt_scriptGadget=Script Gadget
-label.portal.create=
-label.portal.only.live=Your personnal portal is only availabe in live<br/>In edit mode you can only manage the components that are available in this portal under the portal-components Area
-label.portal.rss.add=rss widget has been added to your portal page
-label.portal.widget.add=widget has been added to your portal page
+label.portal.create=Créer mon portail
+label.portal.only.live=Votre portail personnel n'est accessible qu'en mode live. Pour administrer les contenus du portail, allez directement dans l'onglet Contenu du Sélecteur, sélectionnez System Site > Contents > My portal Components.
+label.portal.rss.add=Un widget RSS a été ajouté à votre portail
+label.portal.widget.add=Un widget RSS a été ajouté à votre portail
+label.portal.addComponents=Ajout de composants
+label.portal.addRSS=Ajout de RSS
+jnt_scriptGadget.script=Code de script
+label.portal.addRSSWidget=Ajout de Widget RSS
+label.portal.addWidget=Ajout de Widget
+label.portal.column=Colonne du portail
+label.portal.rss.feedURL=URL du flux RSS
+label.portal.rss.noOfFeeds=Nombre de flux
+label.portal.script= Script
+label.portal.addScriptWidget= Ajout d'un Script Widget
+label.portal.addScriptGadget= Ajout d'un Script Gadget
