--- a/src/main/webapp/resources/JahiaMyPortal_en.properties
+++ b/src/main/webapp/resources/JahiaMyPortal_en.properties
@@ -6,6 +6,16 @@ jnt_portal.componentsFolder=Select a folder for the components
 jnt_scriptGadget=Script Gadget
 jnt_scriptGadget.script=Script code
 label.portal.create=Create my portal
-label.portal.only.live=Your personnal portal is only availabe in live<br/>In edit mode you can only manage the components that are available in this portal under the portal-components Area
+label.portal.only.live=Your personal portal is only available in live. To administrate it, go to the Content Tab of the Selector, select System Site > Content > My Portal Component.
 label.portal.rss.add=rss widget has been added to your portal page
 label.portal.widget.add=widget has been added to your portal page
+label.portal.addComponents=Add Components
+label.portal.addRSS=Add RSS
+label.portal.addRSSWidget= Add Rss Widget
+label.portal.addScriptGadget=Add Script Gadget
+label.portal.addWidget=Add Widget
+label.portal.column= Portal Column
+label.portal.rss.feedURL=Rss feed URL
+label.portal.rss.noOfFeeds=Number of feeds
+label.portal.script=Script
+label.portal.addScriptWidget= Add Script Widget
