--- a/src/main/webapp/resources/JahiaMyPortal_fr.properties
+++ b/src/main/webapp/resources/JahiaMyPortal_fr.properties
@@ -9,7 +9,7 @@ label.portal.only.live=Votre portail personnel n'est accessible qu'en mode live.
 label.portal.rss.add=Un widget RSS a été ajouté à votre portail
 label.portal.widget.add=Un widget RSS a été ajouté à votre portail
 label.portal.addComponents=Ajout de composants
-label.portal.addRSS=Ajout de RSS
+label.portal.addRSS=Ajout de flux RSS
 jnt_scriptGadget.script=Code de script
 label.portal.addRSSWidget=Ajout de Widget RSS
 label.portal.addWidget=Ajout de Widget
@@ -18,4 +18,4 @@ label.portal.rss.feedURL=URL du flux RSS
 label.portal.rss.noOfFeeds=Nombre de flux
 label.portal.script= Script
 label.portal.addScriptWidget= Ajout d'un Script Widget
-label.portal.addScriptGadget= Ajout d'un Script Gadget
+label.portal.addScriptGadget= Ajout d'un Script Widget
